[Refactor] 좌석 서비스 리팩토링 #신입-베이스캠프-8기-루키백조TF/91